Fix <widget-text-button> alignment

--- a/style.css
+++ b/style.css
@@ -8,21 +8,26 @@ input[type="checkbox"] + label {
 }
 
 
+.config_list_item_label[data-disabled] {
+    text-decoration: line-through;
+}
+
+
+.config_list_buttons_wrapper {
+    float: right;
+}
+
+
 #login_box_title, #connect_button_wrapper {
     text-align: center;
 }
 
 
-#config_list > widget-tab > widget-text-button {
+#config_list > widget-tab widget-text-button {
     visibility: hidden;
 }
 
 
-#config_list > widget-tab:hover > widget-text-button {
+#config_list > widget-tab:hover widget-text-button {
     visibility: visible;
-}
-
-
-.config_list_item_label[data-disabled] {
-    text-decoration: line-through;
 }
